section: overview + brands + support

--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
         </div>
         <img src="./assets/xpense-hero.svg" alt="" />
       </section>
+      <img
+        class="graphImg"
+        src="./assets/graph.svg"
+        alt="Capture d'écran de l'application"
+      />
+      <section class="brands">
+        <img src="./assets/brands/facebook-logo.svg" alt="Facebook" />
+        <img src="./assets/brands/google-logo.svg" alt="Google" />
+        <img src="./assets/brands/cocacola-logo.svg" alt="Coca-Cola" />
+        <img src="./assets/brands/linkedin-logo.svg" alt="LinkedIn" />
+        <img src="./assets/brands/samsung-logo.svg" alt="Samsung" />
+      </section>
+      <section class="support">
+        <div class="text">
+          <p>Always online</p>
+          <h2>Real-time support with cloud</h2>
+          <p>
+            Tellus lacus morbi sagittis lacus in. Amet nisl at mauris enim
+            accumsan nisi, tincidunt vel, Enim ipsum, amet quis ullamcorper eget
+            ut.
+          </p>
+          <a href="#">Learn more</a>
+        </div>
+        <img src="./assets/kitchen.svg" alt="Support" />
+      </section>
     </main>
   </body>
 </html>
