--- a/index.html
+++ b/index.html
@@ -54,6 +54,49 @@
         </div>
         <img src="./assets/kitchen.svg" alt="Support" />
       </section>
+      <section class="plans">
+        <h2>Choose your flexible plan.</h2>
+        <div class="plans-container">
+          <div class="plan">
+            <h3>Starter Plan</h3>
+            <div class="content">
+              <p>Store unlimited data</p>
+              <p>Export to pdf, cls, csv</p>
+              <p>Cloud server support</p>
+            </div>
+            <p class="price">$9.99<span>/year</span></p>
+            <p class="detail">up to 3 users + 1.00 per user</p>
+            <button>Get this</button>
+          </div>
+          <div class="plan">
+            <h3>Silver Plan</h3>
+            <div class="content">
+              <p>Store unlimited data</p>
+              <p>Export to pdf, cls, csv</p>
+              <p>Cloud server support</p>
+            </div>
+            <p class="price">$19.99<span>/year</span></p>
+            <p class="detail">up to 3 users + 1.00 per user</p>
+            <button>Get this</button>
+          </div>
+          <div class="plan">
+            <h3>Diamond Plan</h3>
+            <div class="content">
+              <p>Store unlimited data</p>
+              <p>Export to pdf, cls, csv</p>
+              <p>Cloud server support</p>
+            </div>
+            <p class="price">$29.99<span>/year</span></p>
+            <p class="detail">up to 3 users + 1.00 per user</p>
+            <button>Get this</button>
+          </div>
+        </div>
+      </section>
+      <section class="stats">
+        <h2>20M+ downloaded from 32 different countries</h2>
+        <p>Try demo for 7 days with full features.</p>
+        <button>Try free demo</button>
+      </section>
     </main>
   </body>
 </html>
