--- a/index.html
+++ b/index.html
@@ -96,7 +96,57 @@
         <h2>20M+ downloaded from 32 different countries</h2>
         <p>Try demo for 7 days with full features.</p>
         <button>Try free demo</button>
+        <img src="./assets/illustrator3.svg" alt="" />
       </section>
+      <footer>
+        <div class="first">
+          <p><span>x</span>pense</p>
+          <div>
+            <h4>Links</h4>
+            <ul>
+              Home
+              <li></li>
+              <li>About us</li>
+              <li>Careers</li>
+              <li>Pricing</li>
+              <li>Features</li>
+              <li>Blog</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Legal</h4>
+            <ul>
+              <li>Terms of use</li>
+              <li>Terms of conditions</li>
+              <li>Privacy policy</li>
+              <li>Cookie policy</li>
+            </ul>
+          </div>
+          <div class="newsletter">
+            <h4>Newsletter</h4>
+            <p>Over 25000 people gave subscribed</p>
+            <form action="">
+              <input type="email" placeholder="Enter your email" />
+              <button>Subscribe</button>
+            </form>
+            <p>We don't sell your email and spam</p>
+          </div>
+        </div>
+        <hr />
+        <div class="second">
+          <div>
+            <p>Privacy & Terms</p>
+            <p>Contact us</p>
+          </div>
+          <p>Copyright © 2025 xpense</p>
+          <div class="links">
+            <img src="" alt="Facebook" /><img src="" alt="Twitter" /><img
+              src=""
+              alt="LinkedIn"
+            />
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
