footer: fin du style

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <p>Privacy & Terms</p>
             <p>Contact us</p>
           </div>
-          <p>Copyright © 2025 xpense</p>
+          <p>Copyright @ 2025 xpense</p>
           <div class="links">
             <img src="" alt="Facebook" /><img src="" alt="Twitter" /><img
               src=""
